import org.gradle.internal.os.OperatingSystem

/**
 ******************  Script Configuration ******************
 */
buildscript {
  repositories {
    jcenter()

    maven {
      url "https://sandec.jfrog.io/artifactory/repo"
    }
  }

  dependencies {
    classpath 'com.sandec.jpro:jpro-plugin-gradle:2021.2.3-SNAPSHOT'
  }
}


/**
 ******************  Java Configuration ******************
 */
apply plugin: 'java'
apply plugin: 'application'
apply plugin: 'com.google.osdetector'

compileJava {
  sourceCompatibility = 11
  targetCompatibility = 11
}

repositories {
  jcenter()

  maven {
    url "https://sandec.jfrog.io/artifactory/repo"
  }
}

ext.JAVA_FX_VERSION = "17.0.2-ea+2"
ext.platform = OperatingSystem.current().isMacOsX() ? 'mac' : OperatingSystem.current().isWindows() ? 'win' : OperatingSystem.current().getName()

dependencies {
    // Add your dependencies here, for example:
    // compile group: 'org.controlsfx', name: 'controlsfx', version: '8.40.14'
    compile "org.openjfx:javafx-base:$JAVA_FX_VERSION:$platform"
    compile "org.openjfx:javafx-graphics:$JAVA_FX_VERSION:$platform"
    compile "org.openjfx:javafx-controls:$JAVA_FX_VERSION:$platform"
    compile "org.openjfx:javafx-fxml:$JAVA_FX_VERSION:$platform"
    compile "org.openjfx:javafx-media:$JAVA_FX_VERSION:$platform"
    compile "org.openjfx:javafx-web:$JAVA_FX_VERSION:$platform"
    compile "org.openjfx:javafx-swing:$JAVA_FX_VERSION:$platform"
}


compileJava {
  doFirst {
    options.compilerArgs = [
            '--module-path', classpath.asPath,
            '--add-modules', 'javafx.fxml,javafx.controls'
    ]
  }
}


run {
  doFirst {
    jvmArgs = [
            '--module-path', classpath.asPath,
            '--add-modules', 'javafx.fxml,javafx.controls'
    ]
  }
}


/**
 ******************  jpro Configuration ******************
 */
apply plugin: 'com.sandec.jpro'


/**
 * App Main Class
 */
//mainClassName = 'com.jpro.hellojpro.HelloJPro'
mainClassName = 'com.jpro.hellojpro.HelloJProFXML'

/**
 * jpro settings
 */
jpro {
  // for debugging
  // JVMArgs << '-agentlib:jdwp=transport=dt_socket,server=n,address=5006,suspend=y'

  JVMArgs << '-Xmx1000m'

  //jpro server port
  port = 8080

}
